# trine-eval

./: .gitignore  CLAUDE.md  LICENSE  README.md  REPOSITORY-MAP.md  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.council/: audit-log.jsonl  config.json  council-manifest.json  decision-log.jsonl  henka-register.jsonl  standard-work.json
.council/course-corrections/: after-sprint-10.md  after-sprint-11.md  after-sprint-12.md  after-sprint-13.md
.council/proposed/: dec-0008-draft.json  dec-0009-draft.json  dec-0010-draft.json  dec-0011-draft.json  dec-0012-log-draft.json  hk-0003-draft.json  hk-0004-draft.json  hk-0005-draft.json
.council/retrospectives/: full-2026-06-01.md  full-2026-06-02.md  sprint-09-mini.md  sprint-10-mini.md  sprint-11-mini.md  sprint-12-mini.md  sprint-13-mini.md
.council/sessions/: 2026-06-01T19-15-00Z.md  (+5 more)
.harness/: applied-harness-proposal-2026-05.md  config.json  dogfood-findings.md  features.json  gap-closure-plan-2026-04.md  playbook-alignment-2026-04.md  progress.md  spec.md  sprint-state.json  sprints-phase-01.json  sprints.json  summary-phase-01.md  summary.md
agents/: evaluator.md  generator.md  planner.md
hooks/: hooks.json
ops/: langfuse-compose.yaml
rules/: harness-conventions.md
scripts/: sandbox.sh  touch-sprint-state.py
tests/: audit-anthropic-mocked.py  audit-report.md  audit-verified-via-command.py  batch-api-smoke.py  check-thinking-frontmatter.py  conftest.py  edge-case-aggregate.py  generate-audit-report.py  playwright-smoke.py  verify-runtime-hookups.sh
(+188 files in other folders)
