[project]
name = "trine-eval"
version = "0.1.0"
description = "A Python eval library for LLM evaluation"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "msgpack>=1.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "langfuse>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
trine-eval = "trine_eval.cli:main"

[project.entry-points.pytest11]
trine-eval = "trine_eval.pytest_plugin"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trine_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
